# EvolvePetriNets

./: .gitignore  allfiles.txt  confmaker.bat  list_of_params_that_are_actually_relevant.txt  pyproject.toml  readme.md  requirements.txt  run_tests.py  sample_code_for_gh_delete_this_later.py  workspace.code-workspace
analysis/: analysis.ipynb  analysis.py
analysis/final_params/: best_fitfunc_running_example.json  roulette.json  roulette_bootstrap.json  speciation.json  speciation_bootstrap.json  speciation_bootstrap_ht.json  speciation_ht.json  truncation.json  truncation_bootstrap.json
configs/: can_it_run.json  default_config.json  multiproc_config.json  multiproc_test_config.json  old_test_config.json  randomstart_config.json  roulette_config.json  single_thread_test.json  test_config.json
configs/best_so_far_19_1_22/: goodparams1.json
configs/few_mutations/: fm_config.json
configs/final_bp/: speciation_simpler_model.json
configs/final_round_spec_vs_roulette_simpler_vs_full/: config.json  finisher.json
configs/improve_fitness/: crazy_config.json
configs/improve_fitness_2/: config.json
configs/m1_log_test/: config.json
neat/: ga.py  genome.py  innovs.py  loginterface.py  main.py  netobj.py  params.py  simple_start_config.py  species.py  test_genome.py  thoughts
old_tests/: bpmn_model.py  conformance_nb.py  petri.pnml
param_files/: speciation_params.json  speciation_params_new.json  test.json
params/: default_params.json
pm_data/: m1_log.xes  running_example.xes  simulated_running_example.xes
src/: __init__.py  main.py  test.json
(+760 files in other folders)
