[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evolvepetrinets"
version = "1.0.0"
description = "Genetic Workflow Miner (GWFM) – A genetic algorithm for process mining that discovers Petri net models from event logs"
readme = "readme.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
authors = [
    { name = "pastra98" },
]
keywords = ["process-mining", "genetic-algorithm", "petri-nets", "NEAT", "conformance-checking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "graphviz",
    "matplotlib",
    "pandas",
    "pyarrow",
    "polars",
    "pm4py",
    "scipy",
    "tabulate",
    "tqdm",
]

[project.optional-dependencies]
gui = ["PyQt6"]
dev = ["ipython"]

[project.urls]
Repository = "https://github.com/pastra98/EvolvePetriNets"

[project.scripts]
gwfm = "main:cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
